[package]
name = "rust_explain_engine"
authors = ["dobutamine <tim.antonius@outlook.com>"]
version = "0.1.0"
description = "wasm test project"
license-file = "LICENSE.txt"
repository = "https://github.com/dobutamine/cargo/"
edition = "2018"


[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
